--- a/css/main.css
+++ b/css/main.css
@@ -969,6 +969,7 @@ a {
 @media screen and (min-width: 1200px) {
   .wrapper-address {
     margin-right: 70px;
+    flex-grow: 1;
   }
 }
 
@@ -1050,9 +1051,6 @@ a {
 }
 
 /* ------------Подписка на рассылку-------------- */
-.subscription {
-  width: 100%;
-}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .subscription {
     margin-top: 60px;
